добавление СУБД
Необходимо также исправить баг связанный с вызовом класса Product в Category.java